[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-supply"
version = "0.1.0"
description = "A priority-queue-driven crop supply monitoring engine."
authors = [
    {name="Your Name", email="you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text="MIT"}

dependencies = [
    "sqlite3",     # optional if using builtin sqlite module
]

[project.urls]
Homepage = "https://github.com/dejely/polaris"
Documentation = "https://github.com/dejely/polaris"
Source = "https://github.com/dejely/polaris"
