[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agriPolaris"
version = "0.1.0"
description = "A priority-queue-driven crop supply monitoring engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Dejel Cyrus De Asis", email = "deasisdejel08@gmail.com" }
]

dependencies = []

[project.urls]
Homepage = "https://github.com/dejely/polaris"
Documentation = "https://github.com/dejely/polaris"
Source = "https://github.com/dejely/polaris"

[tool.setuptools]
package-dir = {"" = "src"}



[tool.setuptools.packages.find]
where = ["src"]
